# guile-cv

./: INSTALL  Makefile.am  NEWS  README  configure.ac  cv.scm  guix.scm
cv/: compose.scm  filter.scm  histogram.scm  impex.scm  morphology.scm  particles.scm  process.scm  texture.scm  transform.scm
doc/: Makefile.am  cr-ip-compose.texi  cr-ip-filter.texi  cr-ip-histogram.texi  cr-ip-idata.texi  cr-ip-kdata.texi  cr-ip-particles.texi  cr-ip-process.texi  cr-ip-texture.texi  cr-ip-transform.texi  cr-ip-utils.texi  cr-ip.texi  guile-cv.texi  variables.texi
